<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.urja.motoservice.UpdateProfileActivity"
    tools:showIn="@layout/activity_update_profile"
    android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/textview_border"
                        android:hint="@string/name"
                        android:paddingTop="6dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="6dp"
                        android:textSize="18sp"
                        android:id="@+id/name"
                        android:nextFocusDown="@id/mobile"
                        android:singleLine="true"
                        android:gravity="center_vertical"/>



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/textview_border"
                        android:hint="@string/mobile"
                        android:paddingTop="6dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="6dp"
                        android:textSize="18sp"
                        android:id="@+id/mobile"
                        android:layout_below="@id/name"
                        android:gravity="center_vertical"
                        android:nextFocusDown="@+id/address"
                        android:singleLine="true"
                        android:inputType="phone"/>


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/textview_border"
                        android:hint="@string/address"
                        android:paddingTop="6dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="6dp"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:id="@+id/address"
                        android:nextFocusRight="@+id/street"
                        android:singleLine="true"
                        android:layout_below="@id/mobile"/>



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/textview_border"
                        android:hint="@string/street"
                        android:paddingTop="6dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="6dp"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:layout_below="@id/address"
                        android:nextFocusDown="@+id/pincode"
                        android:singleLine="true"
                        android:id="@+id/street"/>


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/textview_border"
                        android:hint="@string/pincode"
                        android:paddingTop="6dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="6dp"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:id="@+id/pincode"
                        android:layout_below="@id/street"
                        android:inputType="number"
                        android:singleLine="true"
                        android:imeOptions="actionDone"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@color/colorAccent"
                        android:text="Update Profile"
                        android:textAllCaps="false"
                        android:gravity="center"
                        android:id="@+id/updateProfile"/>
                </RelativeLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

</LinearLayout>
