<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:hint="@string/name"
            android:paddingTop="6dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:textSize="18sp"
            android:id="@+id/name"
            android:gravity="center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Edit image icon"
            android:clickable="true"
            android:padding="4dp"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            android:background="@drawable/edit_states"
            android:src="@drawable/ic_action_edit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/editName"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:hint="@string/mobile"
            android:paddingTop="6dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:textSize="18sp"
            android:id="@+id/mobile"
            android:gravity="center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Edit image icon"
            android:clickable="true"
            android:padding="4dp"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            android:background="@drawable/edit_states"
            android:src="@drawable/ic_action_edit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/editMobile"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:hint="@string/address"
            android:paddingTop="6dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:id="@+id/address"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Edit image icon"
            android:clickable="true"
            android:padding="4dp"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            android:background="@drawable/edit_states"
            android:src="@drawable/ic_action_edit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/editAddress"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:hint="@string/street"
            android:paddingTop="6dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:id="@+id/street"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Edit image icon"
            android:clickable="true"
            android:padding="4dp"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            android:background="@drawable/edit_states"
            android:src="@drawable/ic_action_edit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/editStreet"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:hint="@string/pincode"
            android:paddingTop="6dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:id="@+id/pincode"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Edit image icon"
            android:clickable="true"
            android:padding="4dp"
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            android:background="@drawable/edit_states"
            android:src="@drawable/ic_action_edit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/editPincode"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="bottom"

        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorAccent"
            android:paddingTop="6dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:textSize="18sp"
            android:text="Update Profile"
            android:textAllCaps="false"
            android:gravity="center"
            android:id="@+id/updateProfile"/>
    </RelativeLayout>

</LinearLayout>